--- a/Makefile.am
+++ b/Makefile.am
@@ -835,14 +835,14 @@ backup_backupd_SOURCES = \
     imap/sync_support.h \
     master/service.c \
     backup/backupd.c
-backup_backupd_LDADD = backup/libcyrus_backup.la $(LD_SERVER_ADD)
+backup_backupd_LDADD = backup/libcyrus_backup.la $(LD_SIEVE_ADD) $(LD_SERVER_ADD)
 
 backup_ctl_backups_SOURCES = \
     imap/mutex_fake.c \
     imap/sync_support.c \
     imap/sync_support.h \
     backup/ctl_backups.c
-backup_ctl_backups_LDADD = backup/libcyrus_backup.la $(LD_UTILITY_ADD)
+backup_ctl_backups_LDADD = backup/libcyrus_backup.la $(LD_SIEVE_ADD) $(LD_UTILITY_ADD)
 
 backup_cyr_backup_SOURCES = \
     imap/mutex_fake.c \
@@ -854,7 +854,7 @@ backup_restore_SOURCES = \
     imap/sync_support.c \
     imap/sync_support.h \
     backup/restore.c
-backup_restore_LDADD = backup/libcyrus_backup.la $(LD_UTILITY_ADD)
+backup_restore_LDADD = backup/libcyrus_backup.la $(LD_SIEVE_ADD) $(LD_UTILITY_ADD)
 
 imap_arbitron_SOURCES = imap/arbitron.c imap/cli_fatal.c imap/mutex_fake.c
 imap_arbitron_LDADD = $(LD_UTILITY_ADD)
@@ -1288,13 +1288,13 @@ imap_squat_dump_SOURCES = imap/cli_fatal.c imap/mutex_fake.c imap/squat_dump.c
 imap_squat_dump_LDADD = $(LD_UTILITY_ADD)
 
 imap_sync_client_SOURCES = imap/mutex_fake.c imap/sync_client.c imap/sync_support.c imap/sync_support.h
-imap_sync_client_LDADD = $(LD_UTILITY_ADD)
+imap_sync_client_LDADD = $(LD_SIEVE_ADD) $(LD_UTILITY_ADD)
 
 imap_sync_reset_SOURCES = imap/mutex_fake.c imap/sync_reset.c imap/sync_support.c imap/sync_support.h
-imap_sync_reset_LDADD = $(LD_UTILITY_ADD)
+imap_sync_reset_LDADD = $(LD_SIEVE_ADD) $(LD_UTILITY_ADD)
 
 imap_sync_server_SOURCES = imap/mutex_fake.c imap/sync_server.c imap/sync_support.c imap/sync_support.h master/service.c
-imap_sync_server_LDADD = $(LD_SERVER_ADD)
+imap_sync_server_LDADD = $(LD_SIEVE_ADD) $(LD_SERVER_ADD)
 
 imap_tls_prune_SOURCES = imap/cli_fatal.c imap/mutex_fake.c imap/tls_prune.c
 imap_tls_prune_LDADD = $(LD_UTILITY_ADD)
