--- a/docsrc/_static/event_notifications/ApplePushService.json
+++ b/docsrc/_static/event_notifications/ApplePushService.json
@@ -1,9 +1,9 @@
 {
     "event":"ApplePushService",
     "user": "john@example.org",
-    "apsVersion": "",     # Version of the Apple Push Service this message is compliant with.
-    "apsAccountId": "",   # Service Provider's accountID with the Apple Push Service.
-    "apsDeviceToken": "", # Unique identifier for the user's device registered with Apple
-    "apsSubtopic": "",    # 
+    "apsVersion": "",
+    "apsAccountId": "",
+    "apsDeviceToken": "",
+    "apsSubtopic": "",
     "mailboxes": "[array of mailboxIDs]"
 }
