sieve: add sieve_rebuild wrapper

--- a/Makefile.am
+++ b/Makefile.am
@@ -1670,6 +1670,7 @@ sieve_libcyrus_sieve_la_SOURCES = \
 	sieve/interp.h \
 	sieve/message.c \
 	sieve/message.h \
+	sieve/rebuild.c \
 	sieve/script.c \
 	sieve/script.h \
 	sieve/sieve-lex.l \
