--- a/configure.ac
+++ b/configure.ac
@@ -1542,10 +1542,10 @@ dnl                                [Build DKIM support into iSchedule?]),
 dnl                        AC_MSG_WARN([Your version of OpenDKIM can not support iSchedule.  Consider patching OpenDKIM with contrib/dkim_canon_ischedule.patch])),
 dnl                AC_MSG_WARN([Your version of OpenDKIM can not support iSchedule.  Consider upgrading to OpenDKIM >= 2.7.0]))
 
-        PKG_CHECK_MODULES([NGHTTP2], [libnghttp2],
+        PKG_CHECK_MODULES([NGHTTP2], [libnghttp2 >= 1.5],
                 AC_DEFINE(HAVE_NGHTTP2,[],
                         [Build HTTP/2 support into httpd?]),
-                AC_MSG_WARN([httpd will not have support for HTTP/2.  Consider installing libnghttp2]))
+                AC_MSG_WARN([httpd will not have support for HTTP/2.  Consider installing libnghttp2 >= 1.5]))
 
         HTTP_CPPFLAGS="${XML2_CFLAGS} ${SQLITE3_CFLAGS} ${ICAL_CFLAGS} ${JANSSON_CFLAGS} ${NGHTTP2_CFLAGS}"
         HTTP_LIBS="${XML2_LIBS} ${SQLITE3_LIBS} ${ICAL_LIBS} ${JANSSON_LIBS} ${NGHTTP2_LIBS}"
