configure.ac: try harder to generate a version string

--- a/Makefile.am
+++ b/Makefile.am
@@ -559,6 +559,7 @@ dist_noinst_SCRIPTS = \
 	tools/convert-sieve.pl \
 	tools/dohash \
 	tools/fixsearchpath.pl \
+	tools/git-version.sh \
 	tools/jenkins-build.sh \
 	tools/masssievec \
 	tools/migrate-metadata \
