--- a/Makefile.am
+++ b/Makefile.am
@@ -299,6 +299,7 @@ noinst_LTLIBRARIES += perl/sieve/lib/libisieve.la
 endif # PERL
 
 BUILT_SOURCES += sieve/addr.c sieve/sieve.c sieve/sieve_err.c
+noinst_LTLIBRARIES += sieve/libcyrus_sieve_lex.la
 lib_LTLIBRARIES += sieve/libcyrus_sieve.la
 check_PROGRAMS += sieve/test
 sbin_PROGRAMS += sieve/sievec sieve/sieved
@@ -1652,13 +1653,27 @@ ptclient_ptloader_LDADD += $(AFS_LIBS)
 ptclient_ptloader_LDFLAGS += $(AFS_LDFLAGS)
 endif
 
+# Each new version of flex seems to generate new sign-comparison
+# warnings, while they switch code around between int/yy_size_t.
+#
+# This is a pain because most of us Cyrus devs build with -Werror.
+#
+# Instead of continuing to maintain an ever-growing, increasingly
+# precarious set of post-hoc fixes (see: the former lex-fix rule),
+# let's just ignore sign-comparison warnings from flex-generated
+# sources only.
+sieve_libcyrus_sieve_lex_la_SOURCES = \
+	sieve/addr-lex.l \
+	sieve/sieve-lex.l
+sieve_libcyrus_sieve_lex_la_LIBADD =
+sieve_libcyrus_sieve_lex_la_CFLAGS = $(AM_CFLAGS) $(CFLAG_VISIBILITY) -Wno-sign-compare
+
 nodist_sieve_libcyrus_sieve_la_SOURCES = \
 	sieve/sieve_err.c \
 	sieve/sieve_err.h
 sieve_libcyrus_sieve_la_SOURCES = \
 	sieve/bytecode.h \
 	sieve/addr.y \
-	sieve/addr-lex.l \
 	sieve/bc_emit.c \
 	sieve/bc_eval.c \
 	sieve/bc_generate.c \
@@ -1672,13 +1687,16 @@ sieve_libcyrus_sieve_la_SOURCES = \
 	sieve/message.h \
 	sieve/script.c \
 	sieve/script.h \
-	sieve/sieve-lex.l \
 	sieve/sieve.y \
 	sieve/tree.c \
 	sieve/tree.h \
 	sieve/varlist.c \
 	sieve/varlist.h
-sieve_libcyrus_sieve_la_LIBADD = $(COM_ERR_LIBS) lib/libcyrus_min.la lib/libcyrus.la
+sieve_libcyrus_sieve_la_LIBADD = \
+    sieve/libcyrus_sieve_lex.la \
+    $(COM_ERR_LIBS) \
+    lib/libcyrus_min.la \
+    lib/libcyrus.la
 sieve_libcyrus_sieve_la_CFLAGS = $(AM_CFLAGS) $(CFLAG_VISIBILITY)
 
 sieve_sievec_LDADD = $(LD_SIEVE_ADD)
@@ -1705,28 +1723,9 @@ timsieved_timsieved_SOURCES = \
 
 timsieved_timsieved_LDADD = $(LD_SIEVE_ADD) $(LD_SERVER_ADD)
 
-# TODO: Should not really stay around, but GNU software is hard to
-# contribute fixes to. Needed when building with the following:
-# CFLAGS="-g -fPIC -W -Wall -Wextra -Werror"
-if SIEVE
-lex-fix: sieve/addr-lex.c sieve/sieve-lex.c
-	grep -E '^yy_size_t sieveleng;$$' sieve/sieve-lex.c && \
-    	sed -r -i -e 's/int yyl;/yy_size_t yyl;/g' sieve/sieve-lex.c || :
-
-	grep -E ' yy_size_t  _yybytes_len ' sieve/sieve-lex.c && \
-    	sed -r -i -s 's/\tint i;/\tyy_size_t i;/g' sieve/sieve-lex.c || :
-
-	grep -E ' yy_size_t  _yybytes_len ' sieve/addr-lex.c && \
-    	sed -r -i -s 's/\tint i;/\tyy_size_t i;/g' sieve/addr-lex.c || :
-
-	grep -E '^static int yy_n_chars;' sieve/sieve-lex.c && \
-    	sed -r -i -s 's/\tyy_size_t yy_buf_size;/\tint yy_buf_size;/g' sieve/sieve-lex.c || :
-
-	grep -E '^static int yy_n_chars;' sieve/addr-lex.c && \
-    	sed -r -i -s 's/\tyy_size_t yy_buf_size;/\tint yy_buf_size;/g' sieve/addr-lex.c || :
-else
+# The lex-fix rule is now obsolete, but let's leave a crumb here for a
+# while so that custom build scripts that expect it to exist don't choke.
 lex-fix:
-endif
 
 GIT_VERSION = $(PACKAGE_VERSION)@git_version@
 
